fixed overflow

--- a/teststyle.css
+++ b/teststyle.css
@@ -17,8 +17,8 @@ body {
 	background: #ffffff;
 	margin: auto;
 	margin-top: 50px;
+	overflow: visible;
 	border-radius: 10px;
-	overflow:hidden;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 100px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -134,13 +134,11 @@ h1 {
 	padding: 30px;
 	z-index: 1;
 	opacity: 0;
-	left: 100%;
-	transition: all 0.5s ease-out;
+	transition: all 0.5s ease-in-out;
   }
   .active-slide{
 	visibility: visible;
 	  position: relative;
-	  left: 0;
 	  opacity: 1;
 	  z-index: 2;
   }
@@ -184,6 +182,7 @@ h1 {
 }
 
 .tooltip:hover .tooltip-text {
+	z-index: 3;
 	visibility: visible;
 	opacity: 1;
 }
